# python-datascientist

./: .Rprofile  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .nojekyll  .pre-commit.yaml  .travis.yml  404.html  404.qmd  CITATION.cff  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  _metadata.yml  _quarto-colab.yml  _quarto-dev.yml  _quarto-en.yml  _quarto-fr.yml  _quarto-prod.yml  _quarto-test.yml  _quarto.yml  _variables.yml  allfiles.txt  cards.ejs  cleanmd.py  config.toml  config.yaml  custom-dark.scss  custom-light.scss  custom.scss  diff  environment.yml  environment_test.yml  featured.yaml  go.mod  go.sum  (+22 more)
.devcontainer/: devcontainer.json  postCreate.sh
.github/: pull_request_template.md
.github/workflows/: automatic-test.yaml  build-image.yml  checks.yaml  colab.yml  corrections.yml  cron-test-notebooks.yaml  docker.yml  manual-test.yaml  netlify-prod.yaml  netlify-test.yaml  notebooks.yml  prod.yml  test-light.yaml  test-pr-render-vscode.yaml  test-pr.yaml  test-upgrade-environment.yaml  test.yaml  update-doc-sspcloud.yaml
_extensions/badges/: _extension.yml  badges.lua
_partials/title-block-link-buttons/: title-block.html
assets/js/: custom.js  panelset.js
assets/scss/: custom.scss  panelset.scss
config/: config.toml  menus.toml
config/_default/: config.yaml  menus.toml  menus.yaml  params.toml  params.yaml
content/: _index.md
content/01_data/: .gitattributes  01_tp_numpy.md  02_pandas.Rmd  02_pandas.md  02_pandas_tp.Rmd  02_pandas_tp.ipynb  02_pandas_tp.md  intro.md
content/01_manipulation/: 01_tp_numpy.ipynb  _index.md
content/7_nlp/: index.Rmd  index.md
content/8_nlpexo/: index.md
content/NLP/: 01_intro-old.qmd  01_intro.html  01_intro.qmd  02_exoclean-old.qmd  02_exoclean.html  02_exoclean.qmd  03_embedding.html  03_embedding.qmd  03_lda.html  03_lda.qmd  04_word2vec.html  04_word2vec.qmd  05_exo_supp.html  05_exo_supp.qmd  _import_dumas.qmd  _import_horror.qmd  _index.md  cleantext.py  index.html  index.qmd
content/annexes/: about.html  about.qmd  corrections.html  corrections.qmd  evaluation.html  evaluation.qmd  past-projects.yaml  syllabus.qmd
content/course/: _index.md  index.qmd
content/discarded/: 03_lda.qmd  05_exo_supp.qmd  07_dask.qmd  dallE.qmd
content/docs/: _index.md
content/evaluation/: _index.md
content/getting-started/: 01_environment.html  01_environment.qmd  01_installation.html  01_installation.md  01_installation.qmd  02_DS_environment.html  02_DS_environment.md  02_DS_environment.qmd  02_data_analysis.html  02_data_analysis.qmd  02_environment.qmd  02_python_practice.md  03_data_analysis.html  03_data_analysis.qmd  03_python_practice.md  03_revisions.html  03_revisions.qmd  04_python_practice.html  04_python_practice.qmd  04_rappels_types.Rmd  04_rappels_types.ipynb  04_rappels_types.md  04_revisions.qmd  05_rappels_fonctions.Rmd  05_rappels_fonctions.ipynb  05_rappels_fonctions.md  05_rappels_types.html  05_rappels_types.qmd  06_rappels_classes.Rmd  06_rappels_classes.ipynb  06_rappels_classes.md  06_rappels_fonctions.html  06_rappels_fonctions.qmd  07_ci_python.md  07_rappels_classes.html  07_rappels_classes.qmd  _index.md  index.html  index.qmd
content/git/: _index.Rmd  _index.md  exogit.html  exogit.qmd  index.Rmd  index.html  index.md  index.qmd  introgit.html  introgit.qmd
content/home/: _index.md  features.md  hero.md  portfolio.md  pythonDS.bib
content/listeTP/: _index.md
content/manipulation/: 01_numpy.html  01_numpy.qmd  01_numpy_en.html  01_numpy_en.qmd  01_tp_numpy.Rmd  01_tp_numpy.ipynb  01_tp_numpy.md  02_pandas.Rmd  02_pandas.md  02_pandas_beyond.html  02_pandas_beyond.qmd  02_pandas_intro.html  02_pandas_intro.qmd  02_pandas_intro_en.html  02_pandas_intro_en.qmd  02_pandas_joins.html  02_pandas_joins.qmd  02_pandas_stats.html  02_pandas_stats.qmd  02_pandas_suite.html  02_pandas_suite.qmd  02_pandas_suite_en.html  02_pandas_suite_en.qmd  02_pandas_tp.Rmd  02_pandas_tp.md  02a_pandas_tutorial.html  02a_pandas_tutorial.qmd  02b_pandas_TP.html  02b_pandas_TP.qmd  03_geopandas.Rmd  03_geopandas.md  03_geopandas_TP.html  03_geopandas_TP.qmd  03_geopandas_intro.html  03_geopandas_intro.qmd  03_geopandas_intro_en.html  03_geopandas_intro_en.qmd  03_geopandas_tp.Rmd  03_geopandas_tp.md  03_geopandas_tutorial.html  (+29 more)
content/modelisation/: 0_preprocessing.html  0_preprocessing.qmd  1_modelevaluation.html  1_modelevaluation.qmd  2_SVM.html  2_SVM.qmd  2_classification.html  2_classification.qmd  3_regression.html  3_regression.qmd  4_featureselection.html  4_featureselection.qmd  5_clustering.html  5_clustering.qmd  6_pipeline.html  6_pipeline.qmd  7_mlapi.html  7_mlapi.qmd  _import_data_ml.qmd  _index.Rmd  _index.md  _meta_info.md  api.py  get_data.py  index.html  index.qmd  train.py
content/modern-ds/: continuous_integration.html  continuous_integration.qmd  dallE.qmd  elastic_approfondissement.html  elastic_approfondissement.qmd  elastic_intro.html  elastic_intro.qmd  environment.excalidraw.json  functions-approfondissement.py  functions.py  get_data.py  index.html  index.qmd  s3.html  s3.qmd
content/references/: _index.md
content/slides/: intro.md
content/visualisation/: _historical_data_bike.qmd  _index.md  _prepare_data_bike.qmd  (+8 more)
corrections/: course.ipynb
css/: custom.css
data/: bike.csv  filosofi_2016.csv  readme_filosofi_2016.R  readme_paris_bike.R
dev/: build-correction-nb.sh  render-changes.sh  render.sh  set-up.sh
dev-scripts/: build-correction-nb.sh  change-structure.py  render-changes.sh  render-chapter.sh  set-up.sh
doc/: CONTRIBUTING-en.md  CONTRIBUTING-fr.html  CONTRIBUTING-fr.md  README-fr.md  syllabus.json
docker/: Dockerfile  Dockerfile.ci
en/: 404-listing.json  404.html  index.html  listings.json  search.json  sitemap.xml
input-list/: create-backup.py  sources.yaml
notebooks/: course.ipynb
sspcloud/: METADATA.json  generate-doc.py  init-jupyter-alternative.sh  init-jupyter.sh  init-vscode.sh
static/: footnotes.js
styles/: custom-dark.scss  custom-light.scss  custom.scss  homepage.css  index.css  styles.css
(+816 files in other folders)
