[project]
name = "python-datascientist"
version = "0.1.0"
description = "Source code for Lino Galiana's Python for data science course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "affine==2.4.0",
    "aiobotocore==2.19.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aioitertools==0.12.0",
    "aiosignal==1.3.2",
    "altair==5.4.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "appdirs==1.4.4",
    "attrs==25.1.0",
    "babel==2.16.0",
    "black==24.8.0",
    "blis==0.7.11",
    "boto3==1.36.3",
    "botocore==1.36.3",
    "brotli==1.1.0",
    "cartiflette",
    "cartopy==0.24.1",
    "catalogue==2.0.10",
    "cattrs==24.1.2",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "cloudpathlib==0.20.0",
    "commonmark==0.9.1",
    "confection==0.1.5",
    "contextily==1.6.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "cymem==2.0.11",
    "dataclasses-json==0.6.7",
    "diskcache==5.6.3",
    "duckdb==0.10.1",
    "et-xmlfile==2.0.0",
    "fastexcel==0.11.6",
    "fastjsonschema==2.21.1",
    "fiona==1.10.1",
    "fontawesomefree==6.6.0",
    "fonttools==4.55.6",
    "frozenlist==1.5.0",
    "fsspec==2023.12.2",
    "geographiclib==2.0",
    "geopandas==1.0.1",
    "geoplot==0.5.1",
    "geopy==2.4.1",
    "graphviz==0.20.3",
    "great-tables==0.12.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "htmltools==0.6.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "inflate64==1.0.1",
    "jinja2==3.1.5",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-cache==1.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kaleido==0.2.1",
    "kiwisolver==1.4.8",
    "langchain==0.3.15",
    "langchain-community==0.3.9",
    "langchain-core==0.3.31",
    "langchain-text-splitters==0.3.5",
    "langcodes==3.5.0",
    "langsmith==0.1.147",
    "language-data==1.3.0",
    "lazy-loader==0.4",
    "loguru==0.7.3",
    "lxml==5.3.0",
    "mapclassify==2.8.1",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.0",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "mercantile==1.2.1",
    "mizani==0.11.4",
    "multidict==6.1.0",
    "multivolumefile==0.2.3",
    "murmurhash==1.0.12",
    "mypy-extensions==1.0.0",
    "narwhals==1.23.0",
    "nbclient==0.10.0",
    "nbformat==5.10.4",
    "networkx==3.4.2",
    "numpy==2.2.2",
    "openpyxl==3.1.5",
    "orjson==3.10.15",
    "owslib==0.28.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "patsy==1.0.1",
    "pebble==5.1.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "plotnine==0.13.6",
    "polars==1.8.2",
    "preshed==3.0.9",
    "propcache==0.2.1",
    "psutil==6.1.1",
    "py7zr==0.20.8",
    "pyarrow==17.0.0",
    "pybcj==1.0.3",
    "pycryptodomex==3.21.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pygments==2.19.1",
    "pynsee==0.1.8",
    "pyogrio==0.10.0",
    "pyparsing==3.2.1",
    "pyppmd==1.1.1",
    "pyproj==3.7.0",
    "pyshp==2.3.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-magic==0.4.27",
    "pytz==2024.2",
    "pywaffle==1.1.1",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "pyzstd==0.16.2",
    "rasterio==1.4.3",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-cache==1.2.1",
    "requests-toolbelt==1.0.0",
    "retrying==1.3.4",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "s3fs==2023.12.2",
    "s3transfer==0.11.2",
    "scikit-image==0.24.0",
    "scikit-learn==1.6.1",
    "scipy==1.13.0",
    "seaborn==0.13.2",
    "setuptools==75.8.0",
    "shapely==2.0.6",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.1.0",
    "sniffio==1.3.1",
    "spacy==3.7.5",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlalchemy==2.0.37",
    "srsly==2.5.1",
    "statsmodels==0.14.4",
    "tabulate==0.9.0",
    "tenacity==9.0.0",
    "texttable==1.7.0",
    "thinc==8.2.4",
    "threadpoolctl==3.5.0",
    "tifffile==2025.1.10",
    "topojson==1.9",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2025.1",
    "unidecode==1.3.8",
    "url-normalize==1.4.3",
    "urllib3==1.26.20",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "webdriver-manager==4.0.2",
    "wordcloud==1.9.3",
    "wrapt==1.17.2",
    "xlrd==2.0.1",
    "xyzservices==2025.1.0",
    "yarl==1.18.3",
    "yellowbrick==1.5",
    "zipp==3.21.0",
]

[tool.uv.sources]
cartiflette = { git = "https://github.com/inseefrlab/cartiflette", rev = "f6b0c5d049bd6dcae7b437bd931957371da24278" }
